# maze-solver

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/display/: mainwindow.cpp  mainwindow.h  mazewidget.h
src/maze/generator/: generator.cpp
src/maze/solver/: solver.cpp
